# f

./: README.md  ca.pem  main.py  pyproject.toml  requirements.txt  service.cert  service.key
core/: hash.py  jwt.py
db/: session.py
event/: create_event.py
models/: role.py  user.py
routers/: services.py  test.py
schemas/: auth_schema.py
utils/: email.py
