[project]
name = "fastapi-auth-service"
version = "0.1.0"
description = "FastAPI auth microservice"
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.135.1",
    "uvicorn==0.41.0",

    "sqlalchemy==2.0.48",
    "alembic==1.18.4",
    "psycopg2-binary==2.9.11",

    "pydantic==2.12.5",
    "email-validator==2.3.0",

    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",

    "PyJWT==2.11.0",
    "python-dotenv==1.2.2"
]

[tool.uvicorn]
host = "0.0.0.0"
port = 8000
reload = true